Sec15_Chap157-Add Paging Params: pierrot optimizations